focus: stall node manager, one vm approach
