# container-server/container-node/src/container_node/config.py
@@ -1,0 +1,16 @@
+from pydantic_settings import BaseSettings, SettingsConfigDict
+from functools import lru_cache
+import pwd
+
+class Settings(BaseSettings):
+    username: str
+
+    @property
+    def home_path(self) -> str:
+        return pwd.getpwnam(self.username).pw_dir
+
+    model_config = SettingsConfigDict(env_file=".env")
+
+@lru_cache
+def get_settings():
+    return Settings()
